change docker compose environment for testing

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,12 +7,12 @@ services:
     #build: .
     image: jxsl13/ocrmypdf-watchdog
     environment: 
-      PUID: 1024    # target user ID
+      PUID: 1030    # target user ID
       PGID: 100     # target group ID
       OCRMYPDF_ARGS: --pdf-renderer sandwich --tesseract-timeout 1800 --rotate-pages -l eng+fra+deu --deskew --clean --skip-text
     volumes: 
       #- /etc/localtime:/etc/localtime:ro
-      - ~/Desktop/in:/in
-      - ~/Desktop/out:/out
+      - /volume1/Scans/alexander:/in
+      - /volume1/homes/alexander/Drive/Scans:/out
     network_mode: none
     restart: unless-stopped
