add cpu usage limitation option

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,4 +15,5 @@ services:
       - /volume1/Scans/alexander:/in
       - /volume1/homes/alexander/Drive/Scans:/out
     network_mode: none
+    cpu_percent: 25
     restart: unless-stopped
