--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,16 @@
-version: '2.2'
+version: '2.4'
 
 services:
   ocrmypdf-watchdog:
     container_name: ocrmypdf-watchdog
-    #user: "1030:100" # can be used, must not be used.
-    #build: .
-    image: jxsl13/ocrmypdf-watchdog
+    build: .
+    #image: jxsl13/ocrmypdf-watchdog
     environment: 
-      PUID: 1030    # target user ID
-      PGID: 100     # target group ID
       OCRMYPDF_ARGS: --pdf-renderer sandwich --tesseract-timeout 1800 --rotate-pages -l eng+fra+deu --deskew --clean --skip-text
     volumes: 
-      #- /etc/localtime:/etc/localtime:ro
-      - /volume1/homes/<USER>/Scans:/in
-      - /volume1/homes/<USER>/Documemts:/out
+      - ./volumes/in:/in
+      - ./volumes/out:/out
     network_mode: none
-    #mem_limit: 1024m     # limit RAM usage
-    #cpu_percent: 25      # limit CPU usage
+    mem_limit: 1024m     # limit RAM usage
+    cpu_percent: 50     # limit CPU usage
     restart: unless-stopped
